==> miniwinwm/miniwinwm/MiniWin/hal/Arduino_DevKitC/hal_lcd.c <==
#include <stdbool.h>
#include <string.h>
#include "hal/hal_lcd.h"
#include "miniwin_config.h"
#include "driver/spi_master.h"
#include "driver/gpio.h"
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#define LCD_DISPLAY_WIDTH_PIXELS	240							/**< This is the width of the display in pixels irrespective of user specified display rotation */
#define LCD_DISPLAY_HEIGHT_PIXELS	320							/**< This is the height of the display in pixels irrespective of user specified display rotation */
#define PIN_NUM_MISO 				25							/**< MISO line of LCD controller */
#define PIN_NUM_MOSI 				23							/**< MOSI line of LCD controller */
#define PIN_NUM_CLK  				19							/**< Clock line of LCD controller */
#define PIN_NUM_CS_LCD  			22							/**< CS line of LCD controller */
#define PIN_NUM_DC   				21							/**< Command/Data line of LCD controller */
#define PIN_NUM_RST  				18							/**< RESET line of LCD controller */

void mw_hal_lcd_init(void)
{
    spi_bus_config_t spi_bus_config =
    {
        .miso_io_num = PIN_NUM_MISO,
        .mosi_io_num = PIN_NUM_MOSI,
        .sclk_io_num = PIN_NUM_CLK,
        .quadwp_io_num = -1,
        .quadhd_io_num = -1,
        .max_transfer_sz = 240 * 2
    };

    spi_device_interface_config_t spi_device_interface_config_lcd =
    {
        .clock_speed_hz = 26 * 1000 * 1000,       	/* clock out at 26 MHz */
        .mode = 0,                                	/* SPI mode 0 */
        .spics_io_num = PIN_NUM_CS_LCD,             /* CS pin */
        .queue_size = 7,                          	/* we want to be able to queue 7 transactions at a time */
        .pre_cb = NULL								/* specify no pre-transfer callback */
    };

    /* initialize the SPI bus */
    spi_bus_initialize(HSPI_HOST, &spi_bus_config, 2);

    /* attach the LCD to the SPI bus */
    spi_bus_add_device(HSPI_HOST, &spi_device_interface_config_lcd, &spi_device_handle_lcd);

    /* initialize non-SPI GPIOs */
    gpio_set_direction(PIN_NUM_DC, GPIO_MODE_OUTPUT);
    gpio_set_direction(PIN_NUM_RST, GPIO_MODE_OUTPUT);

    /* reset the display */
    gpio_set_level(PIN_NUM_RST, 0UL);
    vTaskDelay(100 / portTICK_RATE_MS);
    gpio_set_level(PIN_NUM_RST, 1UL);
    vTaskDelay(100 / portTICK_RATE_MS);

	write_command(0x01U);
	vTaskDelay(10 / portTICK_RATE_MS);
	write_command(0xcbU);
	write_data(0x39U);
	write_data(0x2cU);
	write_data(0x00U);
	write_data(0x34U);
	write_data(0x02U);
	write_command(0xcfU);
	write_data(0x00U);
	write_data(0xc1U);
	write_data(0x30U);
	write_command(0xe8U);
	write_data(0x85U);
	write_data(0x00U);
	write_data(0x78U);
	write_command(0xeaU);
	write_data(0x00U);
	write_data(0x00U);
	write_command(0xedU);
	write_data(0x64U);
	write_data(0x03U);
	write_data(0x12U);
	write_data(0x81U);
	write_command(0xf7U);
	write_data(0x20U);
	write_command(0xc0U);
	write_data(0x23U);
	write_command(0xc1U);
	write_data(0x10U);
	write_command(0xc5U);
	write_data(0x3eU);
	write_data(0x28U);
	write_command(0xc7U);
	write_data(0x86U);
	write_command(0x36U);
	write_data(0x48U);
	write_command(0x3aU);
	write_data(0x55U);
	write_command(0xb1U);
	write_data(0x00U);
	write_data(0x18U);
	write_command(0xb6U);
	write_data(0x08U);
	write_data(0x82U);
	write_data(0x27U);
	write_command(0xf2U);
	write_data(0x00U);
	write_command(0x26U);
	write_data(0x01U);
	write_command(0xe0U);
	write_data(0x0fU);
	write_data(0x31U);
	write_data(0x2bU);
	write_data(0x0cU);
	write_data(0x0eU);
	write_data(0x08U);
	write_data(0x4eU);
	write_data(0xf1U);
	write_data(0x37U);
	write_data(0x07U);
	write_data(0x10U);
	write_data(0x03U);
	write_data(0x0eU);
	write_data(0x09U);
	write_data(0x00U);
	write_command(0xe1U);
	write_data(0x00U);
	write_data(0x0eU);
	write_data(0x14U);
	write_data(0x03U);
	write_data(0x11U);
	write_data(0x07U);
	write_data(0x31U);
	write_data(0xc1U);
	write_data(0x48U);
	write_data(0x08U);
	write_data(0x0fU);
	write_data(0x0cU);
	write_data(0x31U);
	write_data(0x36U);
	write_data(0x0fU);
	write_command(0x11U);
	vTaskDelay(120 / portTICK_RATE_MS);
	write_command(0x29U);
	write_command(0x36U);
	write_data(0x48U);

    memset(spi_transactions, 0, sizeof(spi_transactions));

    spi_transactions[0].tx_data[0] = 0x2AU;         	/* column address set */
	spi_transactions[0].length = (size_t)8;
    spi_transactions[0].flags = SPI_TRANS_USE_TXDATA;

	spi_transactions[1].length = (size_t)(4 * 8);
    spi_transactions[1].flags = SPI_TRANS_USE_TXDATA;
	spi_transactions[1].tx_data[0] = 0U;              	/* start column high */
	spi_transactions[1].tx_data[2] = 0U;       			/* end column high */

    spi_transactions[2].tx_data[0] = 0x2BU;          	/* page address set */
	spi_transactions[2].length = (size_t)8;
    spi_transactions[2].flags = SPI_TRANS_USE_TXDATA;

	spi_transactions[3].length = (size_t)(4 * 8);
    spi_transactions[3].flags = SPI_TRANS_USE_TXDATA;

    spi_transactions[4].tx_data[0] = 0x2CU;          	/* memory write */
	spi_transactions[4].length = (size_t)8;
    spi_transactions[4].flags = SPI_TRANS_USE_TXDATA;
}

void inline IRAM_ATTR mw_hal_lcd_filled_rectangle(int16_t start_x,
		int16_t start_y,
		int16_t width,
		int16_t height,
		mw_hal_lcd_colour_t colour)
{
#if defined(MW_DISPLAY_ROTATION_0)
	filled_rectangle_rotated(start_x, start_y, width, height, colour);
#elif defined(MW_DISPLAY_ROTATION_90)
	filled_rectangle_rotated(start_y, LCD_DISPLAY_HEIGHT_PIXELS - start_x - width, height, width, colour);
#elif defined (MW_DISPLAY_ROTATION_180)
	filled_rectangle_rotated(LCD_DISPLAY_WIDTH_PIXELS - start_x - width, LCD_DISPLAY_HEIGHT_PIXELS - start_y - height, width, height, colour);
#elif defined (MW_DISPLAY_ROTATION_270)
	filled_rectangle_rotated(LCD_DISPLAY_WIDTH_PIXELS - start_y - height, start_x, height, width, colour);
#endif
}

void mw_hal_lcd_colour_bitmap_clip(int16_t image_start_x,
		int16_t image_start_y,
		uint16_t bitmap_width,
		uint16_t bitmap_height,
		int16_t clip_start_x,
		int16_t clip_start_y,
		int16_t clip_width,
		int16_t clip_height,
		const uint8_t *image_data)
{
	int16_t x;
	int16_t y;
	mw_hal_lcd_colour_t pixel_colour;
	uint16_t rgb565_colour;

#if defined(MW_DISPLAY_ROTATION_0)
	/* check if pixels in data buffer are all to be drawn and if so use dma */
	if (image_start_x >= clip_start_x &&
			image_start_y >= clip_start_y &&
			image_start_x + (int16_t)bitmap_width <= clip_start_x + clip_width &&
			image_start_y + (int16_t)bitmap_height <= clip_start_y + clip_height &&
            bitmap_width <= LCD_DISPLAY_WIDTH_PIXELS)
	{
		spi_device_acquire_bus(spi_device_handle_lcd, portMAX_DELAY);
		
		if (image_start_x != previous_x || previous_width != bitmap_width)
		{
			gpio_set_level(PIN_NUM_DC, 0);
			spi_device_polling_transmit(spi_device_handle_lcd, &spi_transactions[0]);

			spi_transactions[1].tx_data[1] = (uint8_t)image_start_x;
			spi_transactions[1].tx_data[3] = (uint8_t)(image_start_x + bitmap_width - 1);
			gpio_set_level(PIN_NUM_DC, 1);
			spi_device_polling_transmit(spi_device_handle_lcd, &spi_transactions[1]);

			previous_x = image_start_x;
			previous_width = bitmap_width;
		}		
		
		spi_transactions[5].length = (size_t)(bitmap_width * 2 * 8);
		spi_transactions[5].rxlength = (size_t)(bitmap_width * 2 * 8);
		spi_transactions[5].flags = 0UL;
		spi_transactions[5].tx_buffer = line_buffer;
		
		for (y = 0; y < (int16_t)bitmap_height; y++)
		{
			for (x = 0; x < (int16_t)bitmap_width; x++)
			{
				pixel_colour = *(2 + image_data + (x + y * (int16_t)bitmap_width) * 3);
				pixel_colour <<= 8;
				pixel_colour += *(1 + image_data + (x + y * (int16_t)bitmap_width) * 3);
				pixel_colour <<= 8;
				pixel_colour += *(image_data + (x + y * (int16_t)bitmap_width) * 3);
				
				rgb565_colour = (uint16_t)((((uint32_t)pixel_colour & 0x00f80000UL) >> 8) |
							(((uint32_t)pixel_colour & 0x0000fc00UL) >> 5) |
							(((uint32_t)pixel_colour & 0x000000f8UL) >> 3));
				
				line_buffer[x] = __builtin_bswap16(rgb565_colour);
			}
			
		    gpio_set_level(PIN_NUM_DC, 0);
		    spi_device_polling_transmit(spi_device_handle_lcd, &spi_transactions[2]);

			spi_transactions[3].tx_data[0] = (uint8_t)((image_start_y + y) >> 8);        		/* start row high */
			spi_transactions[3].tx_data[1] = (uint8_t)(image_start_y + y);		      			/* start row low */
			spi_transactions[3].tx_data[2] = (uint8_t)((image_start_y + y) >> 8);    			/* end row high */
			spi_transactions[3].tx_data[3] = (uint8_t)(image_start_y + y);						/* end row low */
		    gpio_set_level(PIN_NUM_DC, 1);
		    spi_device_polling_transmit(spi_device_handle_lcd, &spi_transactions[3]);

		    gpio_set_level(PIN_NUM_DC, 0);
		    spi_device_polling_transmit(spi_device_handle_lcd, &spi_transactions[4]);

		    gpio_set_level(PIN_NUM_DC, 1);
		    spi_device_polling_transmit(spi_device_handle_lcd, &spi_transactions[5]);			
		}
		
		previous_y = image_start_y + y - 1;

		spi_device_release_bus(spi_device_handle_lcd);
		
		return;
	}
#endif	

	for (y = 0; y < (int16_t)bitmap_height; y++)
	{
		for (x = 0; x < (int16_t)bitmap_width; x++)
		{
			if (x + image_start_x >= clip_start_x &&
					x + image_start_x < clip_start_x + clip_width &&
					y + image_start_y >= clip_start_y &&
					y + image_start_y < clip_start_y + clip_height)
			{
				pixel_colour = *(2 + image_data + (x + y * (int16_t)bitmap_width) * 3);
				pixel_colour <<= 8;
				pixel_colour += *(1 + image_data + (x + y * (int16_t)bitmap_width) * 3);
				pixel_colour <<= 8;
				pixel_colour += *(image_data + (x + y * (int16_t)bitmap_width) * 3);
				mw_hal_lcd_pixel(x + image_start_x, y + image_start_y, pixel_colour);
			}
		}
	}
}
